# internal/controller/router.go
@@ -8,26 +8,26 @@ import (
 )
 
 func (ctrl *Controller) RegisterEndpoints() {
+	ctrl.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	{
-apiGroup:=ctrl.router.Group("/api",ctrl.checkUserAuthentication)
-	apiGroup.GET("/employees", ctrl.GetAllEmployees)
-	apiGroup.GET("/employees/:id", ctrl.GetEmployeeById)
-	apiGroup.POST("/employees", ctrl.CreateNewEmployee)
-	apiGroup.PUT("/employees/:id", ctrl.UpdateUserById)
-	apiGroup.DELETE("/employees/:id", ctrl.DeleteUserById)
+		apiGroup := ctrl.router.Group("/api", ctrl.checkUserAuthentication)
+		apiGroup.GET("/employees", ctrl.GetAllEmployees)
+		apiGroup.GET("/employees/:id", ctrl.GetEmployeeById)
+		apiGroup.POST("/employees", ctrl.CreateNewEmployee)
+		apiGroup.PUT("/employees/:id", ctrl.UpdateUserById)
+		apiGroup.DELETE("/employees/:id", ctrl.DeleteEmployeeById)
 	}
-	
-	ctrl.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-{
-	authGroup:=ctrl.router.Group("/auth")
-	authGroup.POST("/sign-up",ctrl.SignUp)
-	authGroup.POST("/sign-in",ctrl.SignIn)
-	authGroup.GET("/refresh",ctrl.RefreshTokenPair)
-	authGroup.POST("/check",ctrl.checkToken)
 
-}
-	
+	{
+		authGroup := ctrl.router.Group("/auth")
+		authGroup.POST("/sign-up", ctrl.SignUp)
+		authGroup.POST("/sign-in", ctrl.SignIn)
+		authGroup.GET("/refresh", ctrl.RefreshTokenPair)
+		authGroup.POST("/check", ctrl.checkToken)
+
+	}
+
 }
 func (ctrl *Controller) RunServer() error {
 	ctrl.RegisterEndpoints()
